# mlops_ml_and_apis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: requests.ipynb
src/app/: main.py
